Fix icon alignment

--- a/styles/hydrogen.less
+++ b/styles/hydrogen.less
@@ -112,6 +112,7 @@ svg:first-child {
   line-height: 2.5em;
   height: 2.5em;
   cursor: pointer;
+  text-align: center;
 }
 
 .multiline-container .toolbar .icon:hover {
